# synapse

./: .appveyor.yml  .bumpversion.cfg  .codecov.yml  .coveragerc  .coveragerc.main  .dockerignore  .drone.yml  .drone.yml.sig  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  Dockerfile  MANIFEST.in  README.md  README.rst  __init__.py  base.py  codecov.yml  common.py  conftest.py  docker-compose.yml  doctest1.ipynb  environment_docs.yml  exc.py  process_stats.py  pyproject.toml  pytest.ini  readthedocs.yaml  readthedocs.yml  requirements.txt  requirements_dev.txt  requirements_doc.txt  setup.cfg  setup.py  testrunner.sh  (+2 more)
.circleci/: config.yml  pandoc.deb.sha256  pyenv_osx.sh  venv_osx.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: git_sync.yaml
docker/: README.rst  bootstrap.sh  build.sh  build_all.sh  build_base.sh  build_image.sh  push_all.sh  rmlist.txt  save_all.sh  test_all.sh
docker/scripts/: build.sh  copy.sh  copy_all.sh  push.sh  push_all.sh  retag.sh  retag_all.sh  save_all.sh  test.sh  test_all.sh
docs/: 404.rst  Makefile  conf.py  contributing.rst  datamodel.md  docker.rst  index.md  index.rst  mastering.rst  performance.rst  release_process.rst  vertex.tpl
docs/docdata/: README.txt  mastering_example_ingest.json
docs/synapse/: 200_changes.rst  300_changes.rst  404.rst  adminguide.rst  adminguide.rstorm  apidocs.rst  axon.rst  changelog.rst  contributing.rst  cortex.rst  datamodel.rst  datamodel_deprecation.rst  deploymentguide.rst  devguide.ipynb  devguide.rst  devops.rst  devopsguide.rst  docker.rst  eventbus.rst  getting_started.rst  glossary.rst  httpapi.ipynb  httpapi.rst  intro.rst  model_format.rst  power_ups.rst  quickstart.rst  stormtypes.rst  support.rst  user_interface.rst  userguide.rst  userguide_section0.rst  userguide_section1.rst  userguide_section2.rst  userguide_section3.rst  userguide_section4.rst
docs/vertex/: conf.json  index.rst.j2
examples/acme-hello/: acme-hello.yaml  test_acme_hello.py
examples/httpapi/: aiohttp_storm_example.py  requests_example.py  requests_storm_example.py
lib/: msgpack.py
lib/crypto/: ecc.py  rsa.py
old_docs/: index.rst  release_process.rst
old_docs/synapse/: devopsguide.rst  userguide_section0.rst
scripts/: benchmark_cortex.py  doctests.py  image_check.sh  migrate_add_dark_tags.py  migrate_add_tag_base.py  pep8_staged_files.py  process_stats.py  replace_commit.py  setcommit.py  syntax_check.py  testrunner.sh  verify_version.py  yaml_model_convert.py
scripts/githooks/: pre-commit
synapse/: __init__.py  aspects.py  async.py  axon.py  cache.py  cells.py  common.py  compat.py  cortex.py  cryotank.py  cryotank_index.py  crypto.py  daemon.py  datamodel.py  datamodel.yaml  datfile.py  dispatch.py  dyndeps.py  eventbus.py  exc.py  gene.py  glob.py  hivemind.py  httpapi.py  impulse.py  link.py  membrane.py  mindmeld.py  neuron.py  pathtree.py  queue.py  reactor.py  registry.py  sched.py  server.py  service.py  session.py  socket.py  statemach.py  synasync.py  (+5 more)
synapse/assets/: __init__.py
synapse/cmds/: auth.py  boss.py  common.py  cortex.py  cron.py  hive.py  trigger.py
synapse/cores/: __init__.py  common.py  lmdb.py  postgres.py  ram.py  sortedram.py  sqlite.py  storage.py  xact.py
synapse/data/: __init__.py  ca.crt.mpk  ca.key.mpk  ca.pem.mpk  iana.tlds.mpk  iana.uris.mpk  root.crt.mpk  root.key.mpk  server.crt.mpk  server.key.mpk  server.pem.mpk  sources.py  user.crt.mpk  user.key.mpk
synapse/dendrite/: coordinator.py  jobs.py  parser.py
synapse/docker/: Dockerfile-37  Dockerfile_debug  __init__.py  start-cron.sh  synapse_dockerfile  synapse_dockerfile_py27  synapse_dockerfile_py35  synapse_dockerfile_py36
synapse/for_lexicon/: base.py
synapse/lib/: __init__.py  agenda.py  aha.py  arbiter.py  ast.py  atomfile.py  atomic.py  auth.py  autodoc.py  base.py  blobfile.py  boss.py  cache.py  cell.py  cellauth.py  certdir.py  changer.py  chop.py  cli.py  cmd.py  cmdr.py  cmpr.py  compat.py  config.py  const.py  coro.py  dark.py  datapath.py  datfile.py  db.py  drive.py  dyndeps.py  editatom.py  editor.py  encoding.py  env.py  fifo.py  fifofile.py  filepath.py  gis.py  (+113 more)
synapse/links/: __init__.py  common.py  local.py  ssh.py  ssl.py  tcp.py  tcpd.py
synapse/lookup/: cvss.py  iana.py  iso3166.py  macho.py  pe.py  phonenum.py  timezones.py
synapse/models/: __init__.py  auth.py  av.py  axon.py  base.py  belief.py  biology.py  biz.py  chemistry.py  compsci.py  crypto.py  dns.py  doc.py  economic.py  entity.py  files.py  finance.py  geopol.py  geospace.py  gov.py  ind.py  inet.py  inet.py.old  infotech.py  language.py  legal.py  material.py  math.py  media.py  mime.py  money.py  orgs.py  person.py  planning.py  proj.py  risk.py  science.py  stats.py  syn.py  telco.py  (+2 more)
synapse/servers/: aha.py  axon.py  cell.py  cortex.py  cryotank.py  jsonstor.py  stemcell.py
synapse/storm/: __init__.py  model-0.2.27-migration.storm
synapse/swarm/: SYNTAX.md  runtime.py  syntax.py
synapse/tests/: ca.crt  ca.key  ca.pem  common.py  docker-compose.yml  nest1.tar  nest2.tar  nopmod.py  rev0.db  rev0.msgpk  rev0.psql  root.crt  server.key  server.pem  test_aspects.py  test_assets.py  test_async.py  test_atomfile.py  test_axon.py  test_cache.py  test_cells.py  test_cli.py  test_cmds_auth.py  test_cmds_boss.py  test_cmds_common.py  test_cmds_cortex.py  test_cmds_cron.py  test_cmds_hive.py  test_cmds_trigger.py  test_common.py  test_compat.py  test_config.py  test_cortex.py  test_cortex_spawn.py  test_cryotank.py  test_cryotank_index.py  test_crypto.py  test_daemon.py  test_data.py  test_data_sources.py  (+376 more)
synapse/tools/: apikey.py  autodoc.py  axon2axon.py  axon2to3.py  backup.py  benchmark_cortex.py  cellauth.py  changelog.py  cmdr.py  csvtool.py  demote.py  deploy.py  dmon.py  docker_validate.py  droned.py  dump_cortex.py  dumprows.py  easycert.py  feed.py  flag_day.py  geninfra.py  geninfra_certsonly.py  genpkg.py  getrefs.py  guid.py  hashset.py  healthcheck.py  hiveload.py  (+36 more)
travis/: install.py
(+952 files in other folders)
