[build-system]
requires = ['setuptools>=68.0.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'synapse'
version = '2.206.0'
authors = [
    { name = 'The Vertex Project LLC', email = 'root@vertex.link'},
]
description = 'Synapse Intelligence Analysis Framework'
readme = 'README.rst'
requires-python = '>=3.11'
license = 'Apache-2.0'
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Topic :: Database :: Database Engines/Servers',
    'Topic :: System :: Clustering',
    'Topic :: System :: Distributed Computing',
    'Topic :: System :: Software Distribution',
    'Programming Language :: Python :: 3.11',
    'Operating System :: POSIX :: Linux',
]
dependencies = [
    'pyOpenSSL>=24.0.0,<24.3.0',
    'cryptography>=43.0.1,<44.0.0',
    'msgpack>=1.0.5,<1.2.0',
    'xxhash>=1.4.4,<3.6.0',
    'lmdb>=1.2.1,<1.7.0',
    'tornado>=6.2.0,<7.0.0',
    'regex>=2022.9.11',
    'PyYAML>=5.4,<6.1.0',
    'aiohttp>=3.10.0,<4.0',
    'aiohttp-socks>=0.9.0,<0.11.0',
    'aioimaplib>=1.1.0,<1.2.0',
    'aiosmtplib>=3.0.0,<3.1.0',
    'prompt_toolkit>=3.0.29,<3.1.0',
    'lark==1.2.2',
    'Pygments>=2.7.4,<2.18.0',
    'packaging>=20.0,<25.0',
    'fastjsonschema>=2.18.0,<2.20.0',
    'stix2-validator>=3.2.0,<4.0.0',
    'vcrpy>=4.3.1,<5.2.0',
    'base58>=2.1.0,<2.2.0',
    'python-bitcoinlib>=0.11.0,<0.13.0',
    'pycryptodome>=3.11.0,<3.22.0',
    'typing-extensions>=3.7.4,<5.0.0', # synapse.vendor.xrpl req
    'scalecodec>=1.0.2,<1.3.0', # synapse.vendor.substrateinterface req
    'cbor2>=5.4.1,<5.7.0',
    'bech32==1.2.0',
    'oauthlib>=3.2.1,<4.0.0',
    'idna>=3.6,<3.8',
    'python-dateutil>=2.8,<3.0',
    'pytz>=2023.3,<2024.1',
    'beautifulsoup4[html5lib]>=4.11.1,<5.0',
    'orjson>=3.10.15,<4.0'
]

[project.optional-dependencies]
dev = [
    'pytest>=7.2.0,<8.0.0',
    'autopep8>=2.0.4,<3.0.0',
    'pytest-cov>=4.0.0,<5.0.0',
    'pycodestyle>=2.10.0,<3.0.0',
    'bump2version>=1.0.1,<1.1.0',
    'pytest-xdist>=3.0.2,<4.0.0',
    'coverage>=7.0.0,<8.0.0',
]
docs = [
    'sphinx>=8.0.0,<9.0.0',
    'sphinx-rtd-theme>=3.0.0,<4.0.0',
    'sphinx-notfound-page>=1.0.4,<2.0.0',
    'jinja2>=3.1.4,<4.0.0',
]

[project.urls]
Homepage = 'https://vertex.link'
Documentation = 'https://synapse.docs.vertex.link'
Repository = 'https://github.com/vertexproject/synapse'
Changelog = 'https://synapse.docs.vertex.link/en/latest/synapse/changelog.html'

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
'synapse' = [
    'data/*.mpk',
    'data/certs/**',
    'data/attack-flow/**',
    'data/jsonschemas/**',
    'lib/storm.lark',
    'tests/files/**',
    'vendor/*/LICENSE'
]

[tool.setuptools.packages.find]
include = ["synapse*"]
