[build-system]
requires = ['setuptools>=68.0.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'synapse'
version = '3.0.0'
authors = [
    { name = 'The Vertex Project LLC', email = 'root@vertex.link'},
]
description = 'Synapse Intelligence Analysis Framework'
readme = 'README.rst'
requires-python = '>=3.14,<3.15'
license = 'Apache-2.0'
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Topic :: Database :: Database Engines/Servers',
    'Topic :: System :: Clustering',
    'Topic :: System :: Distributed Computing',
    'Topic :: System :: Software Distribution',
    'Programming Language :: Python :: 3.14',
    'Operating System :: POSIX :: Linux',
    'Private :: Do Not Upload',
]
dependencies = [
    'cryptography>=46.0.7,<47.0.0',
    'msgpack>=1.0.5,<1.2.0',
    'xxhash>=1.4.4,<3.7.0',
    'lmdb>=1.7.0,<1.8.0',
    'tornado>=6.2.0,<7.0.0',
    'regex>=2022.9.11',
    'PyYAML>=5.4,<6.1.0',
    'aiohttp>=3.10.0,<4.0',
    'aiohttp-socks>=0.9.0,<0.11.0',
    'aiosmtplib>=3.0.0,<3.1.0',
    'prompt_toolkit>=3.0.29,<3.1.0',
    'lark==1.3.1',
    'Pygments>=2.7.4,<2.21.0',
    'packaging>=20.0,<27.0',
    'fastjsonschema>=2.20.0,<2.22.0',
    'stix2-validator>=3.2.0,<4.0.0',
    'vcrpy>=7.0.0,<8.0.0',
    'base58>=2.1.0,<2.2.0',
    'python-bitcoinlib>=0.11.0,<0.13.0',
    'pycryptodome>=3.11.0,<3.24.0',
    'typing-extensions>=3.7.4,<5.0.0', # synapse.vendor.xrpl req
    'scalecodec>=1.0.2,<1.3.0', # synapse.vendor.substrateinterface req
    'cbor2>=5.4.1,<5.10.0',
    'bech32==1.2.0',
    'oauthlib>=3.2.1,<4.0.0',
    'idna>=3.6,<3.12',
    'python-dateutil>=2.8,<3.0',
    'pytz>=2023.3,<2025.3',
    'beautifulsoup4[html5lib]>=4.11.1,<5.0',
    'vtx-yyjson>=4.3.0,<5.0.0',
]

[project.optional-dependencies]
dev = [
    'ruff>0.15.0,<1.0.0',
    'pytest>=7.2.0,<8.0.0',
    'autopep8>=2.0.4,<3.0.0',
    'pytest-cov>=4.0.0,<5.0.0',
    'bump2version>=1.0.1,<1.1.0',
    'pytest-xdist>=3.0.2,<4.0.0',
    'coverage>=7.0.0,<8.0.0',
    'setproctitle>=1.0.0,<2.0.0',
]
docs = [
    'sphinx>=8.0.0,<9.0.0',
    'sphinx-rtd-theme>=3.0.0,<4.0.0',
    'sphinx-notfound-page>=1.0.4,<2.0.0',
    'jinja2>=3.1.4,<4.0.0',
]

[project.urls]
Homepage = 'https://vertex.link'
Documentation = 'https://synapse.docs.vertex.link'
Repository = 'https://github.com/vertexproject/synapse'
Changelog = 'https://synapse.docs.vertex.link/en/latest/synapse/changelog.html'

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
'synapse' = [
    'data/*.mpk',
    'data/certs/**',
    'data/lark/*.lark',
    'data/attack-flow/**',
    'data/jsonschemas/**',
    'tests/files/**',
    'vendor/*/LICENSE'
]

[tool.setuptools.packages.find]
include = ["synapse*"]

[tool.ruff]
include = [
    'synapse/*.py',
    'scripts/*.py',
    'examples/*.py',
]
target-version = "py314"
exclude = [
    'synapse/vendor/*',
]
line-length = 120

[tool.ruff.lint]
select = [
    "E101", # Indentation is not a multiple of {indent_width}
    "E111", # Indentation is not a multiple of {indent_width}
    "E114", # Indentation is not a multiple of {indent_width} (comment)
    "E201", # Whitespace after '{symbol}'
    "E202", # Whitespace before '{symbol}'
    "E203", # Whitespace before '{symbol}'
    "E204", # Whitespace after decorator
    "E221", # Multiple spaces before operator
    "E222", # Multiple spaces after operator
    "E223", # Tab before operator
    "E224", # Tab after operator
    "E225", # Missing whitespace around operator
    "E226", # Missing whitespace around arithmetic operator
    "E227", # Missing whitespace around bitwise or shift operator
    "E228", # Missing whitespace around modulo operator
    "E231", # Missing whitespace after {}
    "E241", # Multiple spaces after comma
    "E242", # Tab after comma
    "E251", # Unexpected spaces around keyword / parameter equals
    "E265", # Block comment should start with #
    "E303", # Too many blank lines
    "E304", # Blank lines found after function decorator
    "E502", # Redundant backslash,
    "E703", # Statement ends with an unnecessary semicolon
    "E711", # Comparison to None should be cond is None
    "E712", # Avoid equality comparisons to True; use {cond}: for truth checks
    "E713", # Test for membership should be not in
    "E714", # Test for object identity should be is not
    "E721", # Use is and is not for type comparisons, or isinstance() for isinstance checks
    "E741", # Ambiguous variable name: {name}
    "E742", # Ambiguous class name: {name}
    "E743", # Ambiguous function name: {name}
    "F401", # Unused imports
    "F541", # f-string without any placeholders
    "F601", # Dictionary key literal repeated
    "F811", # Redefined while unused
    "F821", # Undefined name {name}. {tip}
    "RUF006", # Store a reference to the return value of {expr}.{method}
    "W191", # Indentation contains tabs
    "W291", # Trailing whitespace
    "W292", # No newline at end of file
    "W293", # Blank line contains whitespace
    "W391", # Too many newlines at end of {domain}
    "W605", # Invalid escape sequence: {ch}
]
preview = true

[tool.ruff.lint.per-file-ignores]
"synapse/tests/test_lib_scrape.py" = ["W291"]
